--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -12,9 +12,10 @@
 
 .titulo {
   position: absolute;
+  color: #222861;;
   top: 0;
   text-transform: uppercase;
-  text-shadow: 5px 5px 5px grey;
+  text-shadow: 5px 5px 5px rgb(73, 70, 70);
   font-weight: 700;
   font-size: 40px;
 }
@@ -25,7 +26,7 @@
   left: 0;
   width: 8vw;
   height: 15vh;
-  box-shadow: 0 0 10px 10px gray;
+  /* box-shadow: 0 0 10px 10px gray; */
 }
 
 .searchbar {
