--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -54,3 +54,10 @@
 
 /*FUENTES*/
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&display=swap');
+
+
+.contenedorGeneral{
+  background-color: black;
+  /* background-image: url('../../utils/fotos/fondoHenry.jpg'); */
+  background-image: linear-gradient(to right,  rgb(255, 255, 255),#222861, #ffffff);;
+}
