--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -23,14 +23,29 @@
 }
 
 .titleNews {
-    font-style: italic;
+    /* font-style: italic;
     background-color: #9A8246;
     height: 50px;
-    align-items: center;
+    
+   
+   
+    color: #050744; */
     display: flex;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    margin-top: 18px;
+    margin-bottom: 18px;
     justify-content: center;
-    color: #050744;
-}
+    height: 5vh;
+    width: 60vw;
+    color: #28139e;
+    padding: 1px;
+    font-weight: 100;
+    position: relative;
+    background: linear-gradient(to right, #222861, rgb(255, 255, 255), #222861);
+    }
+
 
 .textDescription{
     white-space: nowrap;
