--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -8,10 +8,10 @@
     border-top: solid 1px  black;
     width: 100%;
     height: 15%;
-    background-color: grey;
+    background-color: #9a8757;
 }
 .copyright{
-    background-color: grey;
+    background-color:#9a8757;
     padding-top: 20px;
     padding-bottom: 10px;
     margin-bottom: -20px;
@@ -27,6 +27,7 @@
     margin-bottom: 0px;
     margin-left: 40px;
     text-transform: uppercase;
+    color: #222861;
 }
 .redes ul{
     display: flex;
@@ -44,7 +45,7 @@
     list-style: none;
     margin-bottom: 5px;
     text-align: justify;
-    color: white;
+    color: rgb(56, 56, 56);
     font-size: 35px;
     margin-left: 20px;
     cursor: pointer;
@@ -74,12 +75,13 @@ color: rgb(0, 0, 105);
     font-size: 20px;
     margin-bottom: 10px;
     text-transform: uppercase;
+   color:  #222861;
 }
 .noticias ul li{
     list-style: none;
     margin-bottom: 5px;
     text-align: justify;
-    color: white;
+    color: rgb(56, 56, 56);
     font-size: 15px;
     margin-left: -35px;
     cursor: pointer;
@@ -88,19 +90,20 @@ color: rgb(0, 0, 105);
 .noticias ul li:hover{
     transform: scale(1.2);
     transition: all 0.3s ease;
-    text-shadow: 3px 3px 3px black;
+    text-shadow: 3px 3px 3px rgb(141, 138, 138);
 }
 .actividades h3{
     text-align: center;
     font-size: 20px;
     margin-bottom: 10px;
     text-transform: uppercase;
+    color: #222861;
 }
 .actividades ul li{
     list-style: none;
     margin-bottom: 5px;
     text-align: justify;
-    color: white;
+    color: rgb(56, 56, 56);
     font-size: 15px;
     margin-left: -35px;
     cursor: pointer;
@@ -109,19 +112,20 @@ color: rgb(0, 0, 105);
 .actividades ul li:hover{
     transform: scale(1.2);
     transition: all 0.3s ease;
-    text-shadow: 3px 3px 3px black;
+    text-shadow: 3px 3px 3px rgb(141, 138, 138);
 }
 .contacto h3{
     text-align: end;
     font-size: 20px;
     margin-bottom: 10px;
     text-transform: uppercase;
+    color: #222861;
 }
 .contacto ul li{
     list-style: none;
     margin-bottom: 5px;
     text-align: end;
-    color: white;
+    color: rgb(56, 56, 56);
     font-size: 15px;
 }
 .contacto p{
@@ -135,7 +139,7 @@ color: rgb(0, 0, 105);
 .contacto p:hover{
     transform: scale(1.2);
     transition: all 0.3s ease;
-    text-shadow: 3px 3px 3px black;
+    text-shadow: 3px 3px 3px rgb(141, 138, 138);
 }
 
 
