--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -12,7 +12,7 @@
 
 .titulo {
   position: absolute;
-  color: #222861;;
+  color: #222861;
   top: 0;
   text-transform: uppercase;
   text-shadow: 5px 5px 5px rgb(73, 70, 70);
@@ -37,10 +37,21 @@
 
 .botonDeslizable {
   position: absolute;
-  background-color: #222861;
-  color: white;
+
+  color: #222861;
   padding: 20px;
-  font-size: 20px;
+  font-size: 30px;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+.botonDeslizableDos {
+  position: absolute;
+
+  color: #222861;
+  padding: 20px;
+  font-size: 30px;
   border: none;
   border-radius: 50%;
   width: 20px;
@@ -49,7 +60,14 @@
 .dropdown {
   position: relative;
   display: inline-block;
-  left: 45vw;
+  top: -2vh;
+  left: 40vw;
+}
+.dropdownDos {
+  position: relative;
+  display: inline-block;
+  top: -2vh;
+  left: 3vw;
 }
 
 .dropdown-content {
@@ -84,5 +102,5 @@
 
 /* cambiiar el color del boton cuando se muestra el contenido */
 .dropdown:hover .botonDeslizable {
-  background-image: linear-gradient(#434c9a, #9c824a);
+  /* background-image: linear-gradient(#434c9a, #9c824a); */
 }
