boton de creacion de evento

--- a/src/components/Calendario/Calendario.css
+++ b/src/components/Calendario/Calendario.css
@@ -1,8 +1,23 @@
+.calendarioContainer {
+    position: relative;
+    z-index: 1;
+
+}
+.calendario{
+    z-index: 1;
+}
+
 .formCalendario {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 2;
+    border: solid 1px red;
 }
-.calendarioContainer{
-    height: 80%;
+
+.evento {
+    
+    top: 20%;
+    left: 50%;
+    background-color: white;
 }
