--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,3 +1,14 @@
+.contenidoCentral {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  margin: auto;
+  width: 80%;
+  border: double 5px rgb(0, 0, 0);
+  margin-bottom: 50px;
+}
 /*BOTONES*/
 .botones {
   display: flex;
