--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -16,12 +16,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: auto;
   color: rgb(0, 0, 0);
-  margin-top: 50px;
+  margin-top: 10%;
   position: absolute;
-  top: 20%;
-  left: 16%;
+  height: 30vh;
+  width: 50vw;
+  top: 8%;
+  left: 10%;
   font-size: 70px;
   font-family: 'Barlow Semi Condensed', sans-serif;
   /* transform: rotate(-5deg); */
@@ -29,21 +30,23 @@
   text-shadow: 5px 10px 5px gray;
 }
 .contenedorGeneral .logo img {
-  width: 250px;
-  height: 250px;
+  width: 15vw;
+  height: 20vh;
   border-radius: 10px;
   position: absolute;
-  top: 25px;
+  top: 5%;
   left: 43%;
 }
 .contenedorGeneral .botones {
   display: flex;
+  position: absolute;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  flex-direction: column;
-  margin-top: 530px;
-  margin-left: -600px;
+  width: 30vw;
+  height: 10vh;
+  border-radius: 10px;
+  top: 60%;
+  left: 20%;
   cursor: pointer;
 }
 
@@ -56,7 +59,8 @@
   text-align: center;
   font-size: 17px;
   padding: 16px;
-  width: 130px;
+  width: 10vw;
+  height: 3vw;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
@@ -70,6 +74,8 @@
   display: inline-block;
   position: relative;
   transition: 0.5s;
+  width: 8vw;
+  height: 1vw;
 }
 
 .contenedorGeneral .botones button span:after {
