--- a/src/components/Form Create Activities/NewActivity.module.css
+++ b/src/components/Form Create Activities/NewActivity.module.css
@@ -4,20 +4,26 @@
     align-items: center;
     justify-content: center;
    
+   
 }
 .loginTitle2{
-    position: absolute;
-    top: 120px;
-    color: gray;
+    color: rgb(0, 0, 0);
+    text-transform: capitalize;
+    font-size: 40px;
   }
 
   .wrapper {
-    width: 50%;
-    height: 75%;
-    box-shadow: 0px 5px 33px -21px rgba(66, 68, 90, 1);
     display: flex;
+    flex-direction: column;
     align-items: center;
-    border-radius: 20px;
+    justify-content: center;
+    margin: auto;
+    border: double 4px black;
+    border-radius: 3%;
+    width: 50%;
+    height: fit-content;
+    padding-top: 20px;
+    background-color: rgb(177, 177, 177);
   }  
 
   .Form{
@@ -26,12 +32,21 @@
     flex-direction: column;
     align-items: center;
   }
-  input{
-    width: 200px;
-    padding: 10px 20px;
-    margin-bottom: 10px;
+  .Form button{
+    margin: 8%;
   }
-  
+  input{
+    margin-bottom: 10px; 
+    width: 70%;
+  transition: all 0.3s ease;
+  font-weight: 700;
+  text-align: center;
+  padding: 10px 20px;
+  }
+  .input:focus{
+    width: 120%;
+    transition: all 0.3s ease;
+  }
   .submit{
     width: 200px;
     background-color: rgba(8, 13, 88, 0.671);
@@ -42,3 +57,11 @@
     border-radius: 5px;
     cursor: pointer;
   }
+  .errors{
+    color: black;
+    font-size: 11px;
+   text-decoration: underline;
+   text-decoration-color: red;
+   
+  }
+  
