--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -15,7 +15,7 @@
   padding: 1px;
   font-size: 40px;
   font-weight: 700;
-  text-transform: capitalize;
+  text-transform: uppercase;
   text-shadow: 2px 2px 2px grey;
 }
 .noticiaSubtitulo{
@@ -178,23 +178,16 @@ hr {
   
   
 }
-.seccionComentariosHechos {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: auto;
-  flex-wrap: wrap;
+.comentariosHechos p {
   width: 100%;
-  max-width: 800px;
   border: #000000e3 solid 1px;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 20px;
-  background-color: #9a875752;
+  background-color: rgba(255, 255, 255, 0.167);
   backdrop-filter: blur(9px);
   margin-left: -20px;
   font-size: 18px;
   font-weight: 700;
-  text-transform: capitalize;
 }
 .containerComment{
   width: 100%;
@@ -204,34 +197,5 @@ hr {
   background-color: rgba(255, 255, 255, 0.167);
   backdrop-filter: blur(9px);
   margin-left: -20px;
-  /* margin-left: -20px; */
-}
-/* .comentariosHechos {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: auto;
-  flex-wrap: wrap;
-  flex-direction: row;
-  border: solid 2px red;
-  width: 80%;
-} */
-.seccionComentariosHechos .nombreComentario {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  margin: auto;
-  font-size: 18px;
-  font-weight: 700;
-  text-decoration: underline;
-  border-top: solid 2px #28139e;
-}
-.seccionComentariosHechos .comentarioEscrito {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  margin: auto;
-  font-size: 15px;
-  margin-bottom: 25px;
-  text-align: end;
+ 
 }
