--- a/src/components/Calendario/Calendario.css
+++ b/src/components/Calendario/Calendario.css
@@ -12,12 +12,32 @@
     flex-direction: column;
     align-items: center;
     z-index: 2;
-    border: solid 1px red;
 }
 
 .evento {
-    
     top: 20%;
     left: 50%;
     background-color: white;
+}
+
+.fc-direction-ltr .fc-button-group > .fc-button:not(:first-child) {
+    display: none;
+}
+
+button span:after {
+    content: none;
+}
+
+.fc-view-harness {
+    display: flex;
+    margin: auto;
+    height: 550px;
+    width: 50%;
+
+}
+
+.diasSemanales {
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
 }
