--- a/src/components/Form Create Activities/NewActivity.module.css
+++ b/src/components/Form Create Activities/NewActivity.module.css
@@ -35,7 +35,7 @@
   .Form button{
     margin: 8%;
   }
-  input{
+  .input{
     margin-bottom: 10px; 
     width: 70%;
   transition: all 0.3s ease;
@@ -43,6 +43,16 @@
   text-align: center;
   padding: 10px 20px;
   }
+  .select{
+    margin-bottom: 10px; 
+    width: 100%;
+  transition: all 0.3s ease;
+  font-weight: 700;
+  text-align: center;
+  align-items: center;
+  padding: 10px 33px;
+  }
+
   .input:focus{
     width: 120%;
     transition: all 0.3s ease;
