--- a/src/PAdmin/headerAdmin/headerAdmin.css
+++ b/src/PAdmin/headerAdmin/headerAdmin.css
@@ -5,24 +5,26 @@
   justify-content: center;
   align-items: flex-start;
   align-content: stretch;
-  background-color: #9a8757;
+  background-color: #ffffff;
   position: relative;
-  height: 10vh;
+  border-bottom: solid 1px #e78345;
+  height: 15vh;
 }
 
 .titulo {
   position: absolute;
-  color: #222861;
+  color: #e78345;
   top: 0;
+  left: 10%;
   text-transform: uppercase;
   text-shadow: 5px 5px 5px rgb(73, 70, 70);
   font-weight: 700;
-  font-size: 40px;
+  font-size: 50px;
 }
 
 .logo {
   position: absolute;
-  top: -25%;
+  top: 0%;
   left: 0;
   width: 8vw;
   height: 15vh;
@@ -43,14 +45,15 @@
 
 .botonDeslizable {
   position: absolute;
-
+  text-transform: uppercase;
   color: #222861;
-  padding: 20px;
+  padding: 10px;
   font-size: 30px;
-  border: none;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  border: solid 1px black;
+  border-radius: 5px;
+  width: 80px;
+  height: 40px;
+  background-image: linear-gradient(#ffffff, #c0bebe);
 }
 .botonDeslizableDos {
   position: absolute;
@@ -83,22 +86,27 @@
   background-color: #f1f1f1;
   /* min-width: 160px; */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  width: 160px;
-  top: 8vh;
-  right: -3vw;
+  width: 180px;
+  top: 9vh;
+  right: -7.5vw;
+  border-radius: 5px;
 }
 
 /* links de adentro */
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+  color: rgb(0, 0, 0);
+  padding: 0px;
   text-decoration: none;
   display: block;
+  transition: all 0.3s ease;
 }
 
 /* cambiar el color en hover */
 .dropdown-content a:hover {
-  background-color: rgb(126, 126, 126);
+  background-color: rgba(126, 126, 126, 0.336);
+  border-radius: 5px;
+  font-size: 18px;
+  transition: all 0.5s ease;
 }
 
 /* mostrar el menu en hover, se puede cambiar a focus */
