--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -14,6 +14,7 @@
   position: absolute;
   color: #222861;
   top: 0;
+  left: 8vw;
   text-transform: uppercase;
   text-shadow: 5px 5px 5px rgb(73, 70, 70);
   font-weight: 700;
