--- a/src/PAdmin/Profile.module.css
+++ b/src/PAdmin/Profile.module.css
@@ -1,12 +1,12 @@
 .header {
-  border-bottom: 3px solid gray;
+  border-bottom: 1px solid #e78345;
 }
 
 .barralateral {
   text-align: left;
   width: 14rem;
   height: calc(100vh - 52px);
-  border-right: 2px solid gray;
+  border-right: 2px solid #e78345;
 }
 ul {
   list-style: none;
@@ -18,9 +18,18 @@ ul {
 li {
   margin-bottom: 1rem;
 }
+li:focus {
+  color: #e78345;
+}
 a {
   text-decoration: none;
-  color: blue;
+  color: black;
+  transition: all 0.3s ease;
+}
+a:focus {
+  color: #e78345;
+
+  transition: all 0.3s ease;
 }
 .container {
   display: flex;
