--- a/src/components/searchbar/SearchBar.css
+++ b/src/components/searchbar/SearchBar.css
@@ -6,7 +6,8 @@
   height: 3.5vh;
   width: 5vw;
   border-radius: 5px;
-  border-color: #ffffff;
+  border-color: #ffffff00;
+  outline: solid 2px #e78345;
   background-color: rgb(255, 255, 255);
   font-size: 18px;
   transition: all 0.3s ease;
@@ -16,9 +17,14 @@
   width: 13vw;
   transition: all 0.3s ease;
   text-align: justify;
+  border-color: #ffffff00;
+  outline: solid 2px #e78345;
 }
 .inputS:hover {
   border-radius: 5px;
+  border-color: #ffffff00;
+  outline: solid 2px #e78345;
+  cursor: pointer;
 }
 
 button {
@@ -37,7 +43,7 @@ button {
   border-radius: 4px;
   background-color: black;
   border: none;
-  color: #ffffff;
+  color: black;
   text-align: center;
   font-size: 17px;
   padding: 10px;
@@ -46,30 +52,115 @@ button {
   cursor: pointer;
   margin: 5px;
 }
-button:hover {
-  background-image: linear-gradient(#434c9a, #9c824a);
-}
 
-button span {
-  cursor: pointer;
+button {
   display: inline-block;
+  font-size: 18px;
+  color: black;
+  font-family: inherit;
+  font-weight: 800;
+  cursor: pointer;
   position: relative;
-  transition: 0.5s;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
 }
 
-button span:after {
-  content: '»';
+button:focus,
+button:hover {
+  color: #e78345;
+}
+
+button:focus:after,
+button:hover:after {
+  width: 100%;
+  left: 0%;
+  color: #e78345;
+}
+
+button:after {
+  content: '';
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
   position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -15px;
-  transition: 0.5s;
+  color: #e78345;
+  width: 0%;
+  height: 2px;
+  background-color: #e78345;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
+}
+
+.button button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  flex-direction: column;
+
   cursor: pointer;
+  border: solid 2px red;
 }
-button:hover span {
-  padding-right: 15px;
+
+.button button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: black;
+  border: none;
+  color: black;
+  text-align: center;
+  font-size: 17px;
+  padding: 10px;
+  width: 130px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
-button:hover span:after {
-  opacity: 1;
-  right: 0;
+
+.button button {
+  display: inline-block;
+  font-size: 18px;
+  color: black;
+  font-family: inherit;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+}
+
+.button button:active,
+.button button:hover {
+  color: #e78345;
+}
+
+.button button:focus:after,
+.button button:hover:after {
+  width: 100%;
+  left: 0%;
+  color: #e78345;
+}
+
+.button button:after {
+  content: '';
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  color: #e78345;
+  width: 0%;
+  height: 2px;
+  background-color: #e78345;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
 }
