--- a/src/components/Form CrearNoticia/CrearNoticia.module.css
+++ b/src/components/Form CrearNoticia/CrearNoticia.module.css
@@ -9,7 +9,8 @@
   align-items: center;
   justify-content: center;
   margin: auto;
-  border: double 4px black;
+  border: solid 4px black;
+  border-radius: 10px;
   width: 40%;
   height: 100%;
   padding-top: 20px;
@@ -59,4 +60,12 @@
 }
 .form .error {
   color: red;
+}
+.form img {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 10px;
+  width: 40%;
+  height: 40%;
 }
