--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,12 +5,12 @@
   /* flex-direction: row; */
   flex-wrap: wrap;
   margin: auto;
-  width: 80%;
-  border: double 5px rgb(0, 0, 0);
+  width: 100%;
+  border: double 5px rgba(0, 0, 0, 0);
   margin-bottom: 50px;
 }
 /*BOTONES*/
-.botones {
+button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,46 +21,42 @@
   cursor: pointer;
 }
 
-.botones button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: black;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 17px;
-  padding: 16px;
-  width: 130px;
-  transition: all 0.5s;
+button {
+  font-size: 18px;
+  color: #e1e1e1;
+  font-family: inherit;
+  font-weight: 800;
   cursor: pointer;
-  margin: 5px;
-}
-.botones button:hover {
-  background-image: linear-gradient(#434c9a, #9c824a);
-}
-
-.botones button span {
-  cursor: pointer;
-  display: inline-block;
   position: relative;
-  transition: 0.5s;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+}
+button:hover .boton button:focus {
+  color: #e78345;
 }
 
-.botones button span:after {
-  content: '»';
+button:focus:after,
+button:hover:after {
+  width: 100%;
+  left: 0%;
+}
+
+button:after {
+  content: '';
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
   position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -15px;
-  transition: 0.5s;
-  cursor: pointer;
-}
-.botones button:hover span {
-  padding-right: 15px;
-}
-.botones button:hover span:after {
-  opacity: 1;
-  right: 0;
+  width: 0%;
+  height: 2px;
+  background-color: #fff;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
 }
 
 /*FUENTES*/
@@ -72,11 +68,9 @@
   background-image: linear-gradient(to right,  rgb(255, 255, 255),#222861, #ffffff);;
 } */
 
-
 /*noticias*/
 
-.titleNews{
+.titleNews {
   text-transform: uppercase;
   text-shadow: 5px 10px 5px gray;
 }
-
