--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&display=swap');
 
 .contenedorGeneral {
-  background-image: url('../../utils/fotos/HenryclubFondo.png');
+  background-image: url('../../utils/fotos/fondoLandingPosta.png');
+  /* background-image: url('../../utils/fotos/LOGODIA.png'); */
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,6 +12,7 @@
   top: 0;
   left: 0;
 }
+
 .contenedorGeneral .titulo {
   display: flex;
   justify-content: center;
@@ -21,78 +23,88 @@
   position: absolute;
   height: 30vh;
   width: 50vw;
-  top: 8%;
-  left: 10%;
-  font-size: 70px;
+  top: 15%;
+  left: 25%;
+  font-size: 60px;
   font-family: 'Barlow Semi Condensed', sans-serif;
   /* transform: rotate(-5deg); */
   text-transform: uppercase;
   text-shadow: 5px 10px 5px gray;
 }
 .contenedorGeneral .logo img {
-  width: 15vw;
-  height: 26vh;
+  width: 500px;
+  height: 100vh;
   border-radius: 10px;
   position: absolute;
   top: 3%;
-  left: 43%;
+  left: 0%;
 }
 .contenedorGeneral .botones {
   display: flex;
   position: absolute;
   align-items: center;
   justify-content: center;
-  width: 30vw;
+  margin: auto;
+  width: 20vw;
   height: 10vh;
   border-radius: 10px;
-  top: 60%;
-  left: 20%;
+  top: 65%;
+  left: 36%;
   cursor: pointer;
+  border: solid 1px rgba(0, 0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.397);
+  box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.34);
+  backdrop-filter: blur(5px);
 }
 
 .contenedorGeneral .botones button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: black;
   border: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 17px;
-  padding: 16px;
+
   width: 8vw;
   height: 2vw;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
 }
-.contenedorGeneral .botones button:hover {
-  background-image: linear-gradient(#434c9a, #9c824a);
-}
-
-.contenedorGeneral .botones button span {
-  cursor: pointer;
+button {
   display: inline-block;
-  position: relative;
-  transition: 0.5s;
-  width: 8vw;
-  height: 1vw;
-}
-
-.contenedorGeneral .botones button span:after {
-  content: '»';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -15px;
-  transition: 0.5s;
+  font-size: 18px;
+  color: black;
+  font-family: inherit;
+  font-weight: 800;
   cursor: pointer;
+  position: relative;
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
 }
 
-.contenedorGeneral .botones button:hover span {
-  padding-right: 15px;
+button:focus,
+button:hover {
+  color: #e78345;
 }
 
-.contenedorGeneral .botones button:hover span:after {
-  opacity: 1;
-  right: 0;
+button:focus:after,
+button:hover:after {
+  width: 100%;
+  left: 0%;
+  color: #e78345;
+}
+
+button:after {
+  content: '';
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  color: #e78345;
+  width: 0%;
+  height: 2px;
+  background-color: #e78345;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
 }
