--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -3,11 +3,18 @@
   justify-content: center;
   align-items: center;
   margin-bottom: -18%;
-  background-color: rgb(201, 207, 206);
-  width: 50%;
+  background-color: #fff;
+  width: 90%;
   height: 50%;
+
   margin-left: auto;
   margin-right: auto;
+  border-top: #e78345 solid 2px;
+}
+.detalleNoticia img {
+  width: 50%;
+  height: 50%;
+  border-radius: 10px;
 }
 .noticiaTitulo {
   color: #000000;
@@ -28,9 +35,10 @@
   padding: 1px;
   font-size: 20px;
   font-weight: 700;
+  text-align: justify;
 }
 .containerTotal {
-  background-color: #3b3a3a;
+  background-color: #fff;
 }
 
 .news {
@@ -106,6 +114,9 @@ hr {
   padding-top: 20px;
   width: 100%;
 }
+.sectionEscribirComentario h3 {
+  text-decoration: underline;
+}
 .sectionEscribirComentario input {
   display: flex;
   margin-left: 25%;
@@ -140,8 +151,8 @@ hr {
   margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 20px;
-  width: 50%;
-  background-color: rgb(216, 201, 201);
+  width: 100%;
+  background-color: #fff;
 }
 .seccionComentarios h3 {
   font-size: 25px;
@@ -162,13 +173,15 @@ hr {
 }
 .seccionComentarios textarea {
   resize: none;
+  margin: auto;
+  margin-top: 20px;
 }
 .seccionComentariosHechos h3 {
   font-size: 25px;
   font-weight: 700;
   text-transform: capitalize;
   text-shadow: 2px 2px 2px gray;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
   display: flex;
   flex-direction: row;
 }
