--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -17,6 +17,7 @@
   margin-bottom: -0px;
   font-size: 15px;
   font-weight: 700;
+  color: #fff;
 }
 .redes {
   margin-top: -25px;
@@ -127,13 +128,13 @@
   list-style: none;
   margin-bottom: 5px;
   text-align: end;
-  color: rgb(56, 56, 56);
+  color: #fff;
   font-size: 15px;
 }
 .contacto p {
   text-decoration: none;
   font-size: 15px;
-  color: black;
+  color: #fff;
   transition: all 0.3s ease;
   text-align: end;
   font-weight: bold;
@@ -141,5 +142,5 @@
 .contacto p:hover {
   transform: scale(1.2);
   transition: all 0.3s ease;
-  text-shadow: 3px 3px 3px rgb(141, 138, 138);
+  text-shadow: 3px 3px 3px rgb(0, 0, 0);
 }
