nuevas alertas, nabvar mejorada, componentes nuevos. (HACER NPM I)

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,14 +1,52 @@
+.contenedorGeneral {
+  position: absolute;
+  margin-top: 60px;
+}
+
 .contenidoCentral {
   display: flex;
   justify-content: space-around;
   align-items: center;
   /* flex-direction: row; */
   flex-wrap: wrap;
-  margin: auto;
+  /* margin: auto; */
   width: 100%;
   border: double 5px rgba(0, 0, 0, 0);
   margin-bottom: 50px;
 }
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+  top: -10vh;
+  left: 0%;
+  width: 500px;
+}
+.menu ul {
+  display: flex;
+}
+.menu li {
+  padding: 0 10px;
+  transition: all 0.3s ease;
+}
+.menu li:hover {
+  color: #e78345;
+  transform: scale(1.2);
+  transition: all 0.3s ease;
+}
+.menu li:focus {
+  color: #e78345;
+}
+.menu a {
+  color: black;
+}
+.menu a:hover {
+  color: #e78345;
+  transform: scale(1.2);
+}
+
 /*BOTONES*/
 button {
   display: flex;
@@ -71,16 +109,21 @@ button:after {
 /*noticias*/
 
 .titleNews {
+  letter-spacing: 2px;
   text-transform: uppercase;
   text-shadow: 5px 10px 5px gray;
 }
 
-.imagen{
+.imagen {
   height: 100%;
   width: 200px;
 }
-
-.deportes{
+.titleActividades {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-shadow: 5px 10px 5px gray;
+}
+.deportes {
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -89,7 +132,7 @@ button:after {
   border-right: 4%;
 }
 
-.deporte{
+.deporte {
   width: 30%;
   height: 600px;
   background: #fff;
@@ -98,18 +141,23 @@ button:after {
   border-right: 4%;
   display: grid;
   grid-area: 2/4/5/6;
+  padding-bottom: 30px;
 }
-
+.deporte p {
+  text-align: justify;
+  width: 400px;
+  margin: auto;
+}
 .futbol {
   display: flex;
   flex-direction: column;
 }
 
-.hockey{
+.hockey {
   display: flex;
   flex-direction: column;
 }
-.natacion{
+.natacion {
   display: flex;
   flex-direction: column;
 }
