--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -79,6 +79,7 @@
   padding: 1px;
   font-weight: 100;
   position: relative;
+  text-transform: uppercase;
 }
 .news .subtitleNews {
   display: flex;
