--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -1,3 +1,53 @@
+/* .navbarFixed {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: stretch;
+  background-color: #9a8757;
+  position: fixed;
+  height: 10vh;
+} */
+/* .contenedor {
+  position: fixed;
+  z-index: 1000000;
+  width: 100%;
+} */
+
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: relative;
+  top: 1vh;
+  left: 0%;
+  width: 500px;
+}
+.menu ul {
+  display: flex;
+}
+.menu li {
+  padding: 0 10px;
+  transition: all 0.3s ease;
+}
+.menu li:hover {
+  color: #e78345;
+  transform: scale(1.2);
+  transition: all 0.3s ease;
+}
+.menu li:focus {
+  color: #e78345;
+}
+.menu a {
+  color: black;
+}
+.menu a:hover {
+  color: #e78345;
+  transform: scale(1.2);
+}
+
 .header {
   display: flex;
   flex-wrap: nowrap;
@@ -6,7 +56,7 @@
   align-items: flex-start;
   align-content: stretch;
   background-color: #9a8757;
-  position: relative;
+  position: relatfive;
   height: 10vh;
 }
 
