--- a/src/components/Calendario/Calendario.css
+++ b/src/components/Calendario/Calendario.css
@@ -1,45 +1,46 @@
 .calendarioContainer {
-    position: relative;
-    z-index: 1;
-
+  position: relative;
+  z-index: 1;
 }
-.calendario{
-    z-index: 1;
-    position: relative;
-    overflow-y:visible
+.tituloCalendario {
+  margin-top: 50px;
+}
+.calendario {
+  z-index: 1;
+  position: relative;
+  overflow-y: visible;
 }
 
 .formCalendario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
 }
 
 .evento {
-    top: 20%;
-    left: 50%;
-    background-color: white;
+  top: 20%;
+  left: 50%;
+  background-color: white;
 }
 
 .fc-direction-ltr .fc-button-group > .fc-button:not(:first-child) {
-    display: none;
+  display: none;
 }
 
 button span:after {
-    content: none;
+  content: none;
 }
 
 .fc-view-harness {
-    display: flex;
-    margin: auto;
-    height: 550px;
-    width: 50%;
-
+  display: flex;
+  margin: auto;
+  height: 550px;
+  width: 50%;
 }
 
 .diasSemanales {
-    display: flex;
-    width: 40%;
-    justify-content: space-evenly;
+  display: flex;
+  width: 40%;
+  justify-content: space-evenly;
 }
