--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,7 +6,10 @@
   flex-direction: column;
   width: 100%;
 } */
-
+.contactanos {
+  color: #e78345;
+  letter-spacing: 2px;
+}
 .contenedorGeneral .titulo {
   font-size: 40px;
   text-align: center;
@@ -46,7 +49,7 @@
 .contenedorGeneral .form textarea {
   resize: none;
 }
-.error{
+.error {
   text-decoration: red;
   color: red;
 }
