--- a/src/components/Form Register/Register.module.css
+++ b/src/components/Form Register/Register.module.css
@@ -10,7 +10,8 @@
   width: 100%;
   background-color: #fff;
   color: black;
-  height: 120vh;
+  height: 100%;
+  transition: all 0.5s ease;
 }
 .container img {
   display: flex;
@@ -36,10 +37,11 @@
   background-color: rgba(255, 255, 255, 0.294);
   font-size: medium;
   width: 40%;
-  height: 95vh;
+  height: 100%;
   border: solid rgba(0, 0, 0, 0) 2px;
   backdrop-filter: blur(5px);
   border-radius: 5px;
+  transition: all 0.5s ease;
 }
 
 .inputContainer {
@@ -56,6 +58,7 @@
   backdrop-filter: blur(5px);
   margin-top: 10px;
   border-radius: 5px;
+  transition: all 0.5s ease;
 }
 .inputContainer label {
   text-transform: uppercase;
@@ -81,6 +84,7 @@
   transition: 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
   font-weight: 700;
   text-align: center;
+  /* margin-top: 10px; */
 }
 
 .input:focus,
@@ -131,8 +135,20 @@ input:hover {
 
 .tag {
   display: block;
+  margin-top: 20px;
 }
 
 .error {
   color: red;
+}
+
+.datosTutor {
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  background-color: #fff;
+  width: 100%;
+  height: 400px;
+  border: solid 2px rgba(255, 0, 0, 0);
+  transition: all 0.5s ease;
 }
