--- a/src/components/SeccionFotos/Fotos.module.css
+++ b/src/components/SeccionFotos/Fotos.module.css
@@ -1,39 +1,23 @@
-.contenedor {
-  text-align: center;
-  padding: 10px;
-  background: #e0dddd;
-}
-.menu {
+.contenedorGeneral .tituloGaleria {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 60px;
   margin: auto;
-  position: relative;
-  top: -10vh;
-  left: 0%;
-  width: 500px;
+  background-color: black;
+  color: white;
+  text-shadow: 5px 5px 5px grey;
+  letter-spacing: 2px;
+  text-align: center;
 }
-.menu ul {
-  display: flex;
-}
-.menu li {
-  padding: 0 10px;
-  transition: all 0.3s ease;
-}
-.menu li:hover {
-  color: #e78345;
-  transform: scale(1.2);
-  transition: all 0.3s ease;
-}
-.menu li:focus {
-  color: #e78345;
-}
-.menu a {
-  color: black;
-}
-.menu a:hover {
-  color: #e78345;
-  transform: scale(1.2);
+
+.contenedor {
+  text-align: center;
+
+  /* background: #e0dddd; */
+  width: 100%;
+  height: 100vh;
 }
 
 #gallery {
