--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,11 +1,38 @@
 .contenido {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   margin: auto;
 
   width: 90%;
-  height: 100vh;
+  height: 100vh; */
+  width: 100%;
+  height: 800px;
+  background: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-left: 4%;
+  border-right: 4%;
+  display: grid;
+  padding-bottom: 0px;
+  border-radius: 20px 20px;
+  align-items: center;
+}
+
+.modalEdit{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.h5{
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+
+.fotoDePefil{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .tituloPerfil {
   font-size: 40px;
@@ -20,7 +47,7 @@
   width: 250px;
   height: 250px;
 
-  position: absolute;
+  position:static;
   top: 30vh;
   left: 2vw;
   border-radius: 50%;
