--- a/src/components/SeccionNews/SeccionNews.module.css
+++ b/src/components/SeccionNews/SeccionNews.module.css
@@ -4,6 +4,11 @@
   align-items: center;
   margin: auto;
   flex-wrap: wrap;
+  background-image: url('../../utils/fotos/fondoNoticias.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .menu {
