--- a/src/PAdmin/News2/News2.css
+++ b/src/PAdmin/News2/News2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fenix&display=swap');
+
 .newsContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -5,21 +7,28 @@
   max-width: 1000px;
   margin: auto;
   font-family: monospace;
+  width: 100%;
+  height: 50%;
 }
-
-.imgNews {
-  height: 200px;
-  width: auto;
-  border-radius: 5px;
-}
-
 .news {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 3px 5px 9px #9a8246;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px;
+  margin-left: 20px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  width: 20%;
+
+  /* border-left: 2px red solid; */
+}
+
+.imgNews {
+  height: 300px;
+  width: 300px;
+  /* border-radius: 5px; */
 }
 
 .titleNews {
@@ -45,7 +54,6 @@
   position: relative;
   background: linear-gradient(to right, #222861, rgb(255, 255, 255), #222861);
 }
-
 
 .textDescription {
   white-space: nowrap;
@@ -103,4 +111,3 @@
   backdrop-filter: blur(9px);
   margin-left: -20px;
 }
-
