--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -1,43 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Fenix&display=swap');
+
 .detalleNoticia {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   margin-bottom: -18%;
   background-color: #fff;
   width: 90%;
-  height: 50%;
+  height: 100%;
 
   margin-left: auto;
   margin-right: auto;
-  border-top: #e78345 solid 2px;
 }
 .detalleNoticia img {
-  width: 50%;
-  height: 50%;
-  border-radius: 10px;
+  width: 70%;
+  height: 60%;
+  border: double 3px black;
+  padding: 10px;
+  margin-bottom: 50px;
 }
 .noticiaTitulo {
   color: #000000;
   padding: 1px;
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 700;
-  text-transform: uppercase;
-  text-shadow: 2px 2px 2px grey;
+  /* text-transform: uppercase; */
+  /* text-shadow: 2px 2px 2px grey; */
+  font-family: 'Fenix', serif;
 }
 .noticiaSubtitulo {
   color: #161515;
   padding: 1px;
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 300;
+  font-family: 'Fenix', serif;
 }
 .noticiaTexto {
   color: #272020;
   padding: 1px;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 100;
   text-align: justify;
   width: 80%;
+  height: 100%;
   margin: auto;
+  font-family: 'Fenix', serif;
 }
 .containerTotal {
   background-color: #fff;
@@ -50,10 +58,12 @@
   margin: auto;
 
   width: 40%;
-  height: 20%;
+  height: 50%;
   margin-top: 20px;
   margin-bottom: 20px;
   transition: all 0.3s ease;
+  background-color: #00000083;
+  backdrop-filter: blur(5px);
 }
 
 .news:hover {
@@ -63,39 +73,43 @@
 .news .imgNews {
   display: flex;
   flex-direction: row;
+  width: 90%;
 }
 
 .news .titleNewss {
   display: flex;
   align-items: center;
-  text-align: center;
+  text-align: justify;
   margin: auto;
-  margin-top: 0px;
+  margin-top: 10px;
   justify-content: center;
-  height: 5vh;
-  width: 100%;
-  color: #000000;
+  height: 10vh;
+  width: 90%;
+  color: #fff;
   padding: 1px;
-  font-weight: 100;
+  font-weight: 700;
   position: relative;
   text-transform: uppercase;
   flex-direction: row;
+  font-size: 25px;
+  font-family: 'Fenix', serif;
 }
 .news .subtitleNews {
   display: flex;
   align-items: center;
-  text-align: center;
+  text-align: justify;
   margin: auto;
   margin-top: 20px;
   margin-bottom: 18px;
   justify-content: center;
   height: 20%;
-  width: 100%;
-  color: #000000;
+  width: 90%;
+  color: #fff;
   padding: 1px;
   font-weight: 100;
   position: relative;
   flex-direction: row;
+  font-family: 'Fenix', serif;
 }
 
 .textDescription {
