--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -24,6 +24,7 @@
   top: -1vh;
   left: 0%;
   width: 500px;
+  font-size: 18px;
 }
 .menu ul {
   display: flex;
@@ -31,9 +32,10 @@
 .menu li {
   padding: 0 10px;
   transition: all 0.3s ease;
+  color: black;
 }
 .menu li:hover {
-  color: #e78345;
+  color: #ffffff;
   transform: scale(1.2);
   transition: all 0.3s ease;
 }
@@ -44,7 +46,7 @@
   color: black;
 }
 .menu a:hover {
-  color: #e78345;
+  color: #ffffff;
   transform: scale(1.2);
 }
 
@@ -58,6 +60,7 @@
 .menu ul li ul li {
   position: relative;
   list-style: none;
+  font-size: 15px;
 }
 
 .menu li:hover > ul {
@@ -65,7 +68,7 @@
   display: block;
   min-width: 80px;
   height: 80px;
-  background-color: #f1f1f1;
+  background-color: #e78345;
   z-index: 11;
   transition: all 0.5s ease;
 }
